<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:padding="4pt"
              android:layout_width="fill_parent" android:orientation="vertical"
              android:layout_height="fill_parent" android:background="#FFFFFF">


    <TextView
            android:textSize="10pt" android:textStyle="bold"
            android:text="@string/titlePreferment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <View android:background="#888888" android:layout_width="fill_parent" android:layout_height="1px"/>s

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/prefermentWater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/prefermentWaterValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

    </RelativeLayout>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/prefermentFlour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/prefermentFlourValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </RelativeLayout>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/prefermentLeaven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/prefermentLeavenValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

    </RelativeLayout>

    <TextView
            android:textSize="10pt" android:textStyle="bold"
            android:text="@string/doughg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <View android:background="#888888" android:layout_width="fill_parent" android:layout_height="1px"/>s

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/doughLiquid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/douhgLiquidValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </RelativeLayout>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/doughFlour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/doughFlourValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </RelativeLayout>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/dougSalt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/doughSaltValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </RelativeLayout>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/doughFat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:textSize="8pt"
                android:layout_alignParentRight="true"
                android:id="@+id/doughFatValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
    </RelativeLayout>

</LinearLayout>