<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:background="#444444"
                android:padding="5pt" android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="fill_parent">

    <TextView
            android:textSize="28sp" android:layout_gravity="center_horizontal"
            android:id="@+id/formulaName" android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <ListView android:id="@+id/lvFormula" android:layout_width="fill_parent" android:layout_below="@id/formulaName"
              android:layout_height="fill_parent"/>

    <LinearLayout android:layout_width="fill_parent" android:layout_height="44sp"
                  android:layout_alignParentBottom="true">

        <Button android:id="@+id/btnCancelFormula" android:text="@string/cancel" android:layout_width="fill_parent"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/btnSaveFormula" android:text="@string/save" android:layout_width="fill_parent"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        <Button android:id="@+id/btnAddIngredientToFormula" android:text="@string/addIngredient"
                android:layout_width="fill_parent" android:gravity="center_horizontal"
                android:layout_height="fill_parent" android:layout_weight="0.5"/>
    </LinearLayout>

</RelativeLayout>
