<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/flourweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView android:id="@+id/flourWeightValue"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                />
    </RelativeLayout>


    <SeekBar style="@style/MyCustomProgressStyle"
             android:id="@+id/sbFlourWegiht"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:progress="40"/>


    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/fatWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView android:id="@+id/fatWeightValue"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                />
    </RelativeLayout>


    <SeekBar style="@style/MyCustomProgressStyle"
             android:id="@+id/sbFats"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:progress="5"/>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/saltWeght"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView android:id="@+id/saltWeightValue"
                  android:layout_alignParentRight="true"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                />
    </RelativeLayout>


    <SeekBar style="@style/MyCustomProgressStyle"
             android:id="@+id/sbSaltWeight"
             android:layout_height="wrap_content"
             android:layout_width="fill_parent"
             android:progress="50"/>


    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">

        <TextView
                android:textSize="8pt"
                android:text="@string/hydration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/hydrationValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />


    </RelativeLayout>

    <SeekBar style="@style/MyCustomProgressStyle"
             android:id="@+id/sbHydration" android:layout_width="fill_parent"
             android:layout_height="wrap_content" android:progress="65"/>

    <RelativeLayout android:orientation="horizontal" android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
        <TextView
                android:textSize="8pt"
                android:text="@string/prefermentpercentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/prefermentPercentageValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

    </RelativeLayout>

    <SeekBar style="@style/MyCustomProgressStyle"
             android:id="@+id/sbPrefermentPercentage" android:layout_width="fill_parent"
             android:layout_height="wrap_content" android:progress="30"/>

    <TextView android:id="@+id/prefermentType" android:text="Preferment type" android:layout_width="fill_parent"
              android:layout_height="wrap_content"/>

    <Spinner android:id="@+id/prefermentTypeSpinner" android:layout_height="wrap_content"
             android:layout_width="fill_parent"/>

    <Button android:id="@+id/calculate" android:gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calculate Recipe"/>

</LinearLayout>

